# illufly

./: .gitignore  LICENSE  README.md  agent.md  api.sh  app.py  app2.py  behave.ini  client.py  design.md  jupyter.sh  pretty.output  progress.output  pyproject.toml  pytest.ini  roadmap.md  setup.py  test_import.py  wiki.sh  zhipuai.ipynb
bdd/features/: environment.py
docs/: package-lock.json
illufly/: API-README.md  __main__.py  __version__.py  async_utils.py  cli.py  state.py  types.py  utils.py
illufly/agent/: __init__.py  base.py  chat.py  chat_agent.py  executor_manager.py  knowledge_manager.py  markdown.py  memory_manager.py  message.py  models.py  state.py  template.py  tool.py  utils.py
illufly/agents/: __init__.py  chat.py  memory.py  schemas.py  thread.py
illufly/api/: http.py  models.py  proxy_middleware.py  start.py  static_files.py  tts_proxy.py
illufly/auth/: __init__.py  auth.py  base.py  whitelist.py
illufly/base/: async_service.py  base_call.py  base_service.py  call_with_cache.py  local_service.py  models.py  simple_service.py  streaming_service.py
illufly/call/: __init__.py  base_call.py  call_with_cache.py  remote_client.py  remote_server.py  simple_service.py
illufly/chat/: __init__.py
illufly/client/: __init__.py  chat.py
illufly/community/: __init__.py  base_chat.py  base_embeddings.py  base_reranker.py  base_tool.py  base_vector_db.py  base_vector_index.py  http.py  models.py
illufly/config/: __init__.py  base.py  logging.py
illufly/core/: dataset.py  document.py  history.py  markmeta.py  message.py  template.py
illufly/docling/: __init__.py  __main__.py  base.py  chunker.py  converter.py  exceptions.py  loader.py  observable.py  pipeline.py  processor.py  schemas.py
illufly/documents/: __init__.py  base.py  chunker.py  indexing.py  machine.py  md_indexing.py  md_manager.py  md_processor.py  meta.py  path_manager.py  processor.py  service.py  sm.py  status.py  topic.py
illufly/embeddings/: __init__.py
illufly/envir/: __init__.py  default_env.py  logging.py
illufly/exporter/: html.py  jupyter.py
illufly/fastapi/: __init__.py  agent.py  auth.py  knowledge.py  result.py  whitelist.py
illufly/flow/: __init__.py
illufly/hub/: __init__.py  base.py  chat_template.py  prompt.py  template.py  xp.py
illufly/importer/: __init__.py  local_files.py  md.py
illufly/io/: __init__.py  block.py  collect_events.py  document.py  event_stream.py  log.py  usage.py
illufly/knowledge/: local_files.py
illufly/learn/: __init__.py
illufly/legency/: types.py
illufly/llm/: __init__.py  base.py  base_tool.py  chat.py  chat_base.py  chat_fake.py  chat_openai.py  chat_qwen.py  docs.py  init_litellm.py  litellm.py  memory.py  models.py  retriever.py  thread.py
illufly/memory/: __init__.py  base_task.py  kg.py  memory_manager.py  pn.py  sparqls.py  utils.py
illufly/mq/: __init__.py  base.py  base_service.py  base_streaming.py  client.py  enum.py  message_bus.py  models.py  pub.py  publisher.py  registry.py  rep.py  req.py  req_rep_service.py  service.py  streaming.py  sub.py  subscriber.py  types.py  utils.py
illufly/parser/: docx.py  markdown.py
illufly/pn/: ablation.py  intent_data.py  intent_generator.py  intent_policy.py  train.py  train_cli.py
illufly/prompt/: __init__.py  hub.py  template.py
illufly/rag/: __init__.py
illufly/retriever/: __init__.py
illufly/rocksdb/: __init__.py  base_rocksdb.py
illufly/rocksdict/: base_rocksdb.py
illufly/text2image/: __init__.py
illufly/thread/: __init__.py  models.py  thread_manager.py
illufly/toolkits/: __init__.py  watch.py
illufly/tools/: __init__.py  python_code.py
illufly/train/: __init__.py  analyze.py  generate.py
illufly/tts/: __init__.py  service.py
illufly/types/: event_block.py
illufly/upload/: base.py
illufly/vectordb/: __init__.py
langchain_chinese/: __init__.py  __version__.py  base.py  command.py  node.py  tree.py
langchain_chinese/agents/: base.py  prompt.py
langchain_chinese/document_loaders/: __init__.py  base.py  local_files.py
langchain_chinese/langgraph/: __init__.py  agents.py  tools_calling.py
langchain_chinese/memory/: __init__.py  base.py  history.py  memory_manager.py  memory_menager.py
langchain_chinese/retrievers/: base.py
langchain_chinese/writing/: ai.py  command.py  content.py  human.py  node.py  serialize.py  state.py  task.py  tree.py
notes/: agent.ipynb  dashscope.ipynb  desk.ipynb  embeddings.ipynb  hub.ipynb  index.md  io.ipynb  kg.ipynb  langgraph.ipynb  llm.ipynb  local_files_loader.ipynb  md.ipynb  memory.ipynb  memory_manager.ipynb  message.ipynb  model.ipynb  pipe.ipynb  qa_loader.ipynb  rag.ipynb  runnable.ipynb  template.ipynb  tongyi.ipynb  toolkits.ipynb  utils.ipynb  welcome.ipynb  wiki.sh  writing.ipynb  zhipuai.ipynb
notes/core/: rag.ipynb  (+7 more)
sample/: api.py  api.sh  chat.py  conversation.py  ui.py
scripts/: base_model.py  bdd_runner.py  behave_runner.py  download_models.py  litellm.yml  mcp_client.py  model_scope.py  mydocling.py  mylitellm.py  mylitellm2.py  nl2sql.py  qwen_coder.py  run_doc_test.py  table_gpt.py  tapex.py  test_doc_processor.py  test_docling.py  test_docling_pdf.py  test_docs.py  test_runner.py  weather_server.py
tests/: conftest.py  desgin.md  test_local_files_loader.py  test_utils.py  test_zhipu.py
tests_bdd/: behave.ini
textlong/: __init__.py  __version__.py  ai.py  base.py  command.py  config.py  hub.py  node.py  projects.py  serialize.py  task.py  tree.py  tree_documents.py  utils.py  writing.py
wiki/: openai.ipynb  sample.ipynb  why.ipynb
zhipu/: base.py
(+1440 files in other folders)
