[tool.poetry]
name = "illufly"
version = "0.7.4"
description = "A simple Agent framework based on GPT with auto-evolution ability."
authors = ["arcstep <xuehongwei@illufly.com>"]
homepage = "https://github.com/arcstep/illufly"
repository = "https://github.com/arcstep/illufly.git"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.4"
pyzmq = "^26.2.0"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
regex = "^2024.11.6"
openai = "^1.59.6"
async-timeout = "^5.0.1"
chevron = "^0.14.0"
python-statemachine = "^2.5.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
pyjwt = "^2.10.1"
email-validator = "^2.2.0"
argon2-cffi = "^23.1.0"
rocksdict = "^0.3.25"
chromadb = "^0.6.3"
rdflib = "^7.1.3"
speedict = "^0.3.12"
numpy = "^1.24.3"
ujson = "^5.10.0"
anyio = "^4.9.0"
llama-cpp-python = "^0.3.8"
transformers = ">=4.42.0,<4.43.0"
torch = ">=2.2.2,<2.3.0"
torchvision = ">=0.17.2,<0.18.0"
torchaudio = ">=2.2.2,<2.3.0"
accelerate = "^1.5.2"
litellm = "^1.63.14"
mcp = "^1.6.0"
docling = "^2.28.4"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.1.0"
poetry2setup = "^1.1.0"
ipykernel = "^6.29.2"
markdown = "^3.6"
dashscope = "^1.20.11"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
uv = "^0.6.10"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
allure-pytest = "^2.13.5"
pytest-cov = "^4.0.0"
trio = "^0.27.0"
httpx = ">=0.27.0"
freezegun = "^1.2.0"
sse-starlette = "^2.1.2"
pytest-timeout = "^2.3.1"
vcrpy = "6.0.1"
anyio = "^4.8.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
deepdiff = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "illufly/**/*"

[tool.anyio]
backend = "asyncio"

