[project]
name = "illufly"
version = "0.8.2"
description = "A simple Agent framework based on GPT with auto-evolution ability."
authors = [
    {name = "arcstep", email = "xuehongwei@illufly.com"}
]
homepage = "https://github.com/arcstep/illufly"
repository = "https://github.com/arcstep/illufly.git"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
regex = "^2024.11.6"
async-timeout = "^5.0.1"
chevron = "^0.14.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
chromadb = "^0.6.3"
ujson = "^5.10.0"
anyio = "^4.9.0"
torch = ">=2.2.2,<2.3.0"
torchvision = ">=0.17.2,<0.18.0"
torchaudio = ">=2.2.2,<2.3.0"
accelerate = "^1.5.2"
litellm = "^1.63.14"
mcp = "^1.6.0"
soundfile = "^0.13.1"
tqdm = "^4.67.1"
aiofiles = "^24.1.0"
python-multipart = "^0.0.20"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.3.1"
httpx = ">=0.27.0"
freezegun = "^1.2.0"
deepdiff = "^8.2.0"
huggingface-hub = "^0.30.1"
requests = "^2.32.3"
tiktoken = "^0.9.0"
soulseal = {path = "../soulseal/backend", develop = true}
voidring = {path = "../voidring", develop = true}
voidrail = {path = "../voidrail", develop = true}
diskcache = "^5.6.3"
click = "^8.1.8"
lancedb = "^0.21.2"
python-statemachine = "^2.5.0"

[tool.poetry.group.dev.dependencies]
openai = "^1.59.6"
llama-cpp-python = "^0.3.8"
rdflib = "^7.1.3"
setuptools = "^69.1.0"
poetry2setup = "^1.1.0"
ipykernel = "^6.29.2"
markdown = "^3.6"
dashscope = "^1.20.11"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
allure-pytest = "^2.13.5"
pytest-cov = "^4.0.0"
trio = "^0.27.0"
sse-starlette = "^2.1.2"
vcrpy = "6.0.1"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "illufly" }
]

[tool.anyio]
backend = "asyncio"

[tool.poetry.scripts]
illufly = "illufly.cli:main"

